--- a/src/pages/Cardapio/Itens/Item/Item.module.scss
+++ b/src/pages/Cardapio/Itens/Item/Item.module.scss
@@ -1,12 +1,20 @@
 @import "styles/variaveis";
 @import "styles/breakpoints";
-
 .item {
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
   display: flex;
   flex-wrap: wrap;
+  padding: 20px;
+  transition: .2s ease-in;
   width: 90%;
+  &:hover {
+    background-color: $grey;
+  }
   &__imagem {
     min-width: 240px;
+    margin-right: 15px;
     @media (max-width: $desktop_xsm) {
       width: 100%;
     }
@@ -21,7 +29,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 0 20px;
+    margin: 0 20px;
     @media (max-width: $desktop_xsm) {
       flex-direction: row;
       margin-top: 20px;
